scss/layout/_burger-menu.scss
.burger-menu {
  position: fixed;
  top: -100%;
  right: 15px;
  width: 165px;
  background: $firstAccentColor;
  box-shadow: 0px 4px 3px rgba(13, 96, 111, 0.25);
  border-radius: 10px;
  padding: 15.5px;
  z-index: 200;
  opacity: 0;
  visibility: hidden;
  transition: $standartTrans;
  &.show {
    top: 15px;
    opacity: 1;
    visibility: visible;
  }

  &__close-btn {
    width: 15px;
    height: 15px;
    background: transparent;
  }
  &__nav {
    margin-top: 14px;
  }
  &__list {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
  }
  &__item {
    &:not(:last-child) {
      margin-bottom: 10px;
    }
  }
  &__link {
    font-family: "Red Hat Text";
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 21px;
    color: #ffffff;
    transition: $standartTrans;
    &:hover {
      color: $secondAccentColor;
    }
  }
}

.popup__wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(#fff, 30%);
  backdrop-filter: blur(5px);
  visibility: hidden;
  opacity: 0;
  transition: opacity 600ms ease;
  &.show {
    visibility: visible;
    opacity: 1;
  }
}

